Add repository to package.json to silence warning

--- a/package.json
+++ b/package.json
@@ -20,5 +20,10 @@
     "mocha": "^2.0.1",
     "unidecode": "*",
     "request": "*"
+  },
+  "repository" :
+  {
+    "type" : "git",
+    "url" : "https://github.com/mapbox/node-unidecode-cxx.git"
   }
 }
