--- a/.travis.yml
+++ b/.travis.yml
@@ -45,6 +45,9 @@ before_install:
 install:
   - npm install --build-from-source --clang=1
 
+before_script:
+  - if ! [ -x "$(command -v aws)" ]; then curl "https://awscli.amazonaws.com/awscli-exe-linux-x86_64.zip" -o "awscliv2.zip" ; unzip awscliv2.zip ; sudo ./aws/install ; fi
+      - aws sts get-caller-identity
 script:
   - npm test
 
